17 April 2007: Wouter
	- copy and decompress dnames.
	- store calculated hash value too.
	- routine to create message out of stored information.
	- util/data/msgparse.c for message parsing code.
	- unit test, and first fixes because of test.
		* forgot rrset_count addition.
		* did & of ptr on stack for memory position calculation.
		* dname_pkt_copy forgot to read next label length.
	- test from file and fixes
		* double frees fixed in error conditions.
		* types with less than full rdata allowed by parser.
		  Some dynamic update packets seem to use it.

16 April 2007: Wouter
	- following a small change in LDNS, parsing code calculates the
	  memory size to allocate for rrs.
	- code to handle ID creation.

13 April 2007: Wouter
	- parse routines. Code that parses rrsets, rrs.

12 April 2007: Wouter
	- dname compare routine that preserves case, with unit tests.
	
11 April 2007: Wouter
	- parse work - dname packet parse, msgparse, querysection parse,
	  start of sectionparse.

10 April 2007: Wouter
	- Improved alignment of reply_info packet, nice for 32 and 64 bit.
	- Put RRset counts in reply_info, because the number of RRs can change
	  due to RRset updates.
	- import of region-allocator code from nsd.
	- set alloc special type to ub_packed_rrset_key.
	  Uses lruhash entry overflow chain next pointer in alloc cache.
	- doxygen documentation for region-allocator.
	- setup for parse scratch data.

5 April 2007: Wouter
	- discussed packed rrset with Jelte.

4 April 2007: Wouter
	- moved to version 0.3.
	- added util/data/dname.c
	- layout of memory for rrsets.

3 April 2007: Wouter
	- detect sign of msghdr.msg_iovlen so that the cast to that type
	  in netevent (which is there to please lint) can be correct.
	  The type on several OSes ranges from int, int32, uint32, size_t.
	  Detects unsigned or signed using math trick.
	- constants for DNS flags. 
	- compilation without locks fixup.
	- removed include of unportable header from lookup3.c.